argo/argocd/traefik_ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.home`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      services:
        - kind: TraefikService
          name: api@internal
